--- a/res/layout-sw600dp/preview.xml
+++ b/res/layout-sw600dp/preview.xml
@@ -12,4 +12,18 @@
         android:layout_height="match_parent"
         android:gravity="center" />
     
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignParentBottom="true"
+       android:layout_alignParentLeft="true"
+       android:layout_alignParentRight="true"
+       android:layout_marginBottom="49dp"
+       android:layout_marginLeft="25dp"
+       android:layout_marginRight="25dp"
+       android:text="@string/preview"
+       android:gravity="center"
+       android:id="@+id/tooltip"
+       android:textAppearance="?android:attr/textAppearanceLarge" />   
+   
 </RelativeLayout>
