Fixed some issues in strings.xml files and in the manifest.

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -60,7 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="STREAMING !"
+            android:text="@string/streaming"
             android:textColor="#11FF11"
             android:textSize="20sp"
             android:visibility="gone" />
