--- a/assets/www/less/styles.css
+++ b/assets/www/less/styles.css
@@ -13,7 +13,7 @@ body:lang(ru) em{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-si
 h1,h2,h3,h4{font-weight:normal;display:block;padding:0;margin:0;}
 em{font-style:normal;}
 a{color:white;-moz-transition:color 0.4s;-ms-transition:color 0.4s;-o-transition:color 0.4s;-webkit-transition:color 0.4s;transition:color 0.4s;}
-a:hover{color:#ff6666;}
+a:hover{color:#ff6666;cursor:pointer;}
 select{display:inline-block;border:1px solid #CCC;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;font-weight:normal;color:#555;background-color:white;font-size:100%;}
 header{padding-top:30px;width:100%;height:150px;text-align:center;}header img{display:block;clear:both;margin:auto;}
 #about{background:rgba(255, 255, 255, 0.2);position:fixed;right:0px;top:0px;width:100px;height:30px;line-height:30px;text-align:center;}
@@ -40,7 +40,7 @@ section #cameras img{display:block;margin:30px auto;filter:alpha(opacity=20);opa
 .popup #close{position:absolute;bottom:10px;left:0px;width:100%;}
 .popup img{-webkit-box-shadow:3px 3px 15px rgba(0, 0, 0, 0.75);-moz-box-shadow:3px 3px 15px rgba(0, 0, 0, 0.75);box-shadow:3px 3px 15px rgba(0, 0, 0, 0.75);}
 #error-screenoff{width:600px;height:120px;}
-#error-noplugin{width:600px;height:420px;}#error-noplugin h3{margin-top:15px;}
+#error-noplugin{width:600px;height:460px;}#error-noplugin h3{margin-top:15px;}
 #error-noplugin img{float:right;margin:60px 15px 10px 10px;}
 footer{margin-top:30px;}footer #connect{clear:both;width:344px;height:56px;margin:auto;}footer #connect>div{cursor:pointer;position:absolute;background:url('../images/red-button.png');width:344px;height:56px;z-index:1;}
 footer #status-container{background:rgba(7, 63, 131, 0.2);width:280px;height:40px;margin:-10px auto;text-align:center;line-height:49px;}
@@ -56,13 +56,15 @@ footer #status-container{background:rgba(7, 63, 131, 0.2);width:280px;height:40p
 #tooltip #title{text-align:center;margin:20px;}
 #tooltip #content{padding:0 20px 20px 20px;text-align:justify;}
 #tooltip #hide-tooltip{display:block;text-align:center;margin-bottom:15px;text-decoration:underline;cursor:pointer;}
+#sound{position:absolute;z-index:-1;bottom:25px;left:-28px;background:rgba(7, 63, 131, 0.2);}#sound #plus,#sound #minus{font-size:24px;}
+#sound #volume{font-size:14px;}
+#sound>div{text-align:center;width:28px;}
 #battery{position:absolute;z-index:-1;bottom:-25px;left:130px;padding:5px 20px 4px 20px;background:rgba(7, 63, 131, 0.2);}
 @-moz-keyframes move{0%{margin-left:0px;} 100%{margin-left:190px;}}@-o-keyframes move{0%{margin-left:0px;} 100%{margin-left:190px;}}@-ms-keyframes move{0%{margin-left:0px;} 100%{margin-left:190px;}}@-webkit-keyframes move{0%{margin-left:0px;} 100%{margin-left:190px;}}#vlc-container{background:black;width:640px;height:480px;float:left;margin-bottom:20px;-webkit-box-shadow:2px 2px 5px rgba(0, 0, 0, 0.7);-moz-box-shadow:2px 2px 5px rgba(0, 0, 0, 0.7);box-shadow:2px 2px 5px rgba(0, 0, 0, 0.7);position:relative;}#vlc-container #upper-layer{display:table;position:absolute;background:url("../images/eye.png") center no-repeat;top:0px;left:0px;width:640px;height:480px;z-index:10;overflow:hidden;}#vlc-container #upper-layer h1{font-size:20px;letter-spacing:8px;}
 #vlc-container #upper-layer #wrapper{display:table-cell;vertical-align:middle;}#vlc-container #upper-layer #wrapper p{padding:0px 90px 0px 90px;text-align:center;}
 #vlc-container #upper-layer #mask{opacity:0.9;-webkit-animation:move 2s infinite alternate ease-in-out;-moz-animation:move 2s infinite alternate ease-in-out;-o-animation:move 2s infinite alternate ease-in-out;-ms-animation:move 2s infinite alternate ease-in-out;animation:move 2s infinite alternate ease-in-out;position:absolute;z-index:100;width:460px;height:55px;top:0;bottom:0;left:0;right:0;margin:auto;background:-moz-linear-gradient(left, #000000 0%, #000000 35%, rgba(0, 0, 0, 0) 50%, #000000 65%, #000000 100%);background:-webkit-gradient(linear, left top, right top, color-stop(0%, #000000), color-stop(35%, #000000), color-stop(50%, rgba(0, 0, 0, 0)), color-stop(65%, #000000), color-stop(100%, #000000));background:-webkit-linear-gradient(left, #000000 0%, #000000 35%, rgba(0, 0, 0, 0) 50%, #000000 65%, #000000 100%);background:-o-linear-gradient(left, #000000 0%, #000000 35%, rgba(0, 0, 0, 0) 50%, #000000 65%, #000000 100%);background:-ms-linear-gradient(left, #000000 0%, #000000 35%, rgba(0, 0, 0, 0) 50%, #000000 65%, #000000 100%);background:linear-gradient(to right, #000000 0%, #000000 35%, rgba(0, 0, 0, 0) 50%, #000000 65%, #000000 100%);}
 #vlc-container #vlc{visibility:hidden;}
 #vlc-container #fullscreen{position:absolute;z-index:0;bottom:-25px;left:20px;padding:5px 20px 4px 20px;background:rgba(7, 63, 131, 0.2);}
-#vlc-container #fullscreen:hover{cursor:pointer;color:#ff6666;}
 .accordion .section{overflow:hidden;-moz-transition:height 1s;-ms-transition:height 1s;-o-transition:height 1s;-webkit-transition:height 1s;transition:height 1s;height:45px;cursor:pointer;position:relative;z-index:0;}.accordion .section .title{position:absolute;z-index:2;top:0;left:0;width:257px;background:url('../images/blue-button.png');height:45px;clear:both;}.accordion .section .title h1{line-height:41px;}
 .accordion .section .section-content{position:absolute;z-index:1;top:40px;left:17px;width:220px;height:340px;margin:auto;padding-top:1px;background:rgba(255, 255, 255, 0.1);}
 .accordion .selected{height:340px;}
