--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -54,16 +54,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <TextView
+        <LinearLayout
             android:id="@+id/streaming"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="top"
             android:gravity="center"
-            android:text="@string/streaming"
-            android:textColor="#11FF11"
-            android:textSize="20sp"
-            android:visibility="gone" />
+            android:orientation="vertical"
+            android:visibility="gone" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@string/streaming"
+                android:textColor="#11FF11"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/bitrate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@string/bitrate"
+                android:textColor="#11FF11"
+                android:textSize="16sp" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/advice"
