Fix crash on tablets
java.lang.ClassCastException: android.view.SurfaceView cannot be cast to net.majorkernelpanic.streaming.gl.SurfaceView
            at net.majorkernelpanic.spydroid.ui.PreviewFragment.onCreateView(PreviewFragment.java:79)

--- a/res/layout-sw600dp/preview.xml
+++ b/res/layout-sw600dp/preview.xml
@@ -4,7 +4,7 @@
     android:background="#001629"
     android:layout_height="match_parent" >    
     
-   <SurfaceView
+   <net.majorkernelpanic.streaming.gl.SurfaceView
         android:id="@+id/tablet_camera_view"
         android:background="@drawable/preview"
         android:layout_margin="20dp"
