--- a/ipcamera/src/main/res/drawable/preview.xml
+++ b/ipcamera/src/main/res/drawable/preview.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item>
-        <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-			<solid
-			    android:color="@android:color/transparent" />
+        <shape xmlns:android="http://schemas.android.com/apk/res/android">
+            <solid android:color="@android:color/transparent" />
             <stroke
                 android:width="1dp"
                 android:color="#4D5C69" />
