--- a/ipcamera/src/main/res/layout/spydroid.xml
+++ b/ipcamera/src/main/res/layout/spydroid.xml
@@ -9,10 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center" />
-    
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/handset_pager"
@@ -21,7 +21,7 @@
             android:layout_above="@+id/adcontainer"
             android:background="@android:color/transparent"
             android:layout_alignParentTop="true"
-            tools:context=".SpydroidActivity" >
+            tools:context=".SpydroidActivity">
 
             <androidx.viewpager.widget.PagerTitleStrip
                 android:id="@+id/pager_title_strip"
@@ -41,13 +41,12 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            </View>
+                android:layout_height="wrap_content"></View>
         </LinearLayout>
     </RelativeLayout>
-    
+
 </FrameLayout>
