--- a/ipcamera/src/main/res/menu/menu.xml
+++ b/ipcamera/src/main/res/menu/menu.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/options"
-          android:icon="@drawable/settings"
-          android:title="@string/options" />
-    <item android:id="@+id/quit"
-          android:icon="@drawable/quit"
-          android:title="@string/quit" />
+    <item
+        android:id="@+id/options"
+        android:icon="@drawable/settings"
+        android:title="@string/options" />
+    <item
+        android:id="@+id/quit"
+        android:icon="@drawable/quit"
+        android:title="@string/quit" />
 </menu>
